# national-parks-agglomerate

./: .gitignore  README.md  _quarto.yml  app.py  documentation.qmd  index.qmd  pyproject.toml  requirements.txt  technical-report.qmd  test_package.py  tutorial.qmd
data/processed/: parks_clean.csv  parks_final.csv  parks_with_alerts.csv
data/raw/: alerts_raw.csv  campgrounds_raw.csv  parks_raw.csv
docs/: documentation.html  index.html  search.json  technical-report.html  tutorial.html
national_parks/: __init__.py  analyze.py  clean.py  data.py
src/: clean_parks.py  get_alerts.py  get_campgrounds.py  get_parks.py  merge_alerts.py  merge_campgrounds.py
src/national_parks_agglomerate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
