[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "national-parks-agglomerate"
version = "0.1.0"
description = "NPS data acquisition and analysis package"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ryan Morrow" }
]
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
    "numpy",
    "matplotlib"
]

[tool.setuptools]
packages = ["national_parks"]